--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -7,12 +7,25 @@
     tools:context=".ui.activity.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/main_title_tv"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp"
+        android:text="@string/main_title"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <fragment
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:name="com.meta.weather.presentation.ui.fragment.weather.WeatherFragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_title_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
